@@ -55,7 +55,7 @@ com.sun.jersey.version = 1.9
 /com.uwyn/jhighlight = 1.0
 /commons-beanutils/commons-beanutils = 1.8.3
 /commons-cli/commons-cli = 1.2
-/commons-codec/commons-codec = 1.9
+/commons-codec/commons-codec = 1.10
 /commons-collections/commons-collections = 3.2.1
 /commons-configuration/commons-configuration = 1.6
 /commons-digester/commons-digester = 2.1
